# askai

./: README.md  activate.sh  install.py  pyproject.toml  setup.py
src/advanced_askai/: api.py  chatgpt.py  cli.py  constants.py  interactive_chat_session.py  internal_chat_session.py  make_chatbot.py  openaicfg.py  parse_args.py  prompt_input.py  run_chat_query.py  streams.py  types.py  util.py
src/advanced_askai/wip/: streaming_console.py
tests/: live_check.py  live_check_cli.py  test_api.py  test_help.py  test_interative.py  test_single_prompt.py  test_single_prompt_checked.py  test_single_prompt_cli_through_api.py
