[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced_askai"
readme = "README.md"
description = "askai questions on the command line"
requires-python = ">=3.7"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "json5",
    "tiktoken>=0.7.0",
    "openai>=1.3.7,<=1.55.3",
    "appdirs",
    "consolemd",
    "keyring",
]
# Change this with the version number bump.
version = "1.0.2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
askai = "advanced_askai.cli:main"
advanced-askai = "advanced_askai.cli:main"